RESOLVED FIXED202067
Harden assertion in StructureIDTable::get().
https://bugs.webkit.org/show_bug.cgi?id=202067
Summary Harden assertion in StructureIDTable::get().
Mark Lam
Reported 2019-09-20 17:21:45 PDT
Attachments
proposed patch. (1.34 KB, patch)
2019-09-20 17:24 PDT, Mark Lam
keith_miller: review+
Mark Lam
Comment 1 2019-09-20 17:24:33 PDT
Created attachment 379292 [details] proposed patch.
Keith Miller
Comment 2 2019-09-20 17:27:42 PDT
Comment on attachment 379292 [details] proposed patch. r=me.
Mark Lam
Comment 3 2019-09-20 17:29:56 PDT
Thanks for the review. Landed in r250172: <http://trac.webkit.org/r250172>.
Note You need to log in before you can comment on or make changes to this bug.