Harden assertion in StructureIDTable::get(). https://bugs.webkit.org/show_bug.cgi?id=202067 <rdar://problem/55577923>

Reviewed by Keith Miller.

* runtime/StructureIDTable.h:
(JSC::StructureIDTable::get):



Canonical link: https://commits.webkit.org/215671@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250172 268f45cc-cd09-0410-ab3c-d52691b4dbfc